@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add AssumeSkip, mostly for benchmarking
     Normalise file arguments before calling want
     Expose ShakeException
     Add isFailure to ShakeProgress, and display in progressDisplay
